cmake_minimum_required(VERSION 3.22)
project(hw1)

set(CMAKE_CXX_STANDARD 17)

add_executable(
        hw1 main.cpp

#        src/simple_swap.cpp
#        include/simple_swap.h

#        include/hard_swap.h
#        src/hard_swap.cpp

#        src/strange_return.cpp
#        include/strange_return.h

        src/mysterious_init_array.cpp
        include/mysterious_init_array.h
)
