cmake_minimum_required(VERSION 3.22)
project(hw6)

set(CMAKE_CXX_STANDARD 17)

add_executable(
        hw6 main.cpp

#        src/looks_like_polymorphism.cpp
#        include/looks_like_polymorphism.h

#        src/fun_and_do.cpp
#        include/fun_and_do.h

#        src/delete_like_this.cpp
#        include/delete_like_this.h

#        src/fun_and_do_again.cpp
#        include/fun_and_do_again.h

        src/animal_count.cpp
        include/animal_count.h
)
