cmake_minimum_required(VERSION 3.22)
project(hw7)

set(CMAKE_CXX_STANDARD 17)

add_executable(
        hw7 main.cpp

#        src/simple_sumarray.cpp
#        include/simple_sumarray.h

#        src/simple_foreach.cpp
#        include/simple_foreach.h

#        src/simple_filter.cpp
#        include/simple_filter.h

#        src/while_cin.cpp
#        include/while_cin.h

#        src/fake_istream_iterator.cpp
#        include/fake_istream_iterator.h

#        src/this_template_is_easy.cpp
#        include/this_template_is_easy.h

        src/sort_again.cpp
        include/sort_again.h
)
