cmake_minimum_required(VERSION 3.22)
project(hw8)

set(CMAKE_CXX_STANDARD 17)

add_executable(
        hw8 main.cpp

#        src/goodcopy.cpp
#        include/goodcopy.h

#        src/sort_by_distance.cpp
#        include/sort_by_distance.h

#        src/tricky_3d_array.cpp
#        include/tricky_3d_array.h

#        src/function_filter.cpp
#        include/function_filter.h

#        src/my_list_sort.cpp
#        include/my_list_sort.h

#        src/my_ostream_iterator.cpp
#        include/my_ostream_iterator.h

        src/my_list.cpp
        include/my_list.h
)
