cmake_minimum_required(VERSION 3.22)
project(hw9)

set(CMAKE_CXX_STANDARD 17)

add_executable(
        hw9 main.cpp

#        src/my_set.cpp
#        include/my_set.h

#        src/arena.cpp
#        include/arena.h

#        src/coldblood_arena.cpp
#        include/coldblood_arena.h

        src/student_info.cpp
        include/student_info.h
)
